runelite-plugin/build_error.txt

> Task :compileJava FAILED
D:\Repo\5bGP\runelite-plugin\src\main\java\com\flipto5b\GeOverlay.java:38: error: cannot find symbol
        Widget geSearchResults = client.getWidget(ComponentID.GRAND_EXCHANGE_SCROLL_LIST);
                                                             ^
  symbol:   variable GRAND_EXCHANGE_SCROLL_LIST
  location: class ComponentID
Note: Some input files use or override a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
1 error

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileJava'.
> Compilation failed; see the compiler error output for details.

* Try:
> Run with --info option to get more log output.
> Run with --scan to get full insights.

BUILD FAILED in 3s
1 actionable task: 1 executed
